update almost complete

--- a/LAB1/about.html
+++ b/LAB1/about.html
@@ -21,9 +21,9 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0" id="unorderListNav">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0" >
                   <li class="nav-item">
-                    <a class="nav-link" href="Index.html"><i class="fas fa-home"></i> Home</a>
+                    <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="about.html"><i class="fas fa-info"></i> About Us</a>
