--- a/LAB1/index.html
+++ b/LAB1/index.html
@@ -20,9 +20,9 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0" id="unorderListNav">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="Index.html"><i class="fas fa-home"></i> Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html"><i class="fas fa-home"></i> Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="about.html"><i class="fas fa-info"></i> About Us</a>
